fix margin and scrollbar and set emoji-picker design

--- a/gtk-3.0/containers.css
+++ b/gtk-3.0/containers.css
@@ -44,7 +44,7 @@ frame > border {
 /* --- notebook --- */
 
 notebook {
-	margin: 2px 0 1px;
+	margin: 1px 0;
 	background: @nb_bg;
 }
 
